# protovalidate-python

./: .env  .gitattributes  .gitignore  Makefile  Pipfile  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml  nonconforming.yaml  poe_tasks.toml  protovalidate-python.code-workspace  pyproject.toml  pyproject_old.toml  string_ext.textproto  zensical.toml
.github/: CONTRIBUTING.md  dependabot.yml  release.yaml  renovate.json5
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: add-to-project.yaml  ci.yaml  conformance.yaml  emergency-review-bypass.yaml  notify-approval-bypass.yaml  pr-title.yaml  protovalidate-gencode-pypi-sync.yaml  release.yaml
buf/protovalidate/: validator.py
buf/protovalidate/conformance/: runner.py
buf/protovalidate/internal/: constraints.py  extra_func.py  string_format.py
buf/validate/: expression_pb2.py  validate_pb2.py  validator.py
buf/validate/conformance/cases/: bool_pb2.py  bool_pb2.pyi  enums_pb2.pyi  filename_with_dash_pb2.py  maps_pb2.py  numbers_pb2.py  oneofs_pb2.py  repeated_pb2.py  strings_pb2.py  strings_pb2.pyi  wkt_any_pb2.py  wkt_timestamp_pb2.pyi
buf/validate/conformance/cases/custom_constraints/: custom_constraints_pb2.py
buf/validate/conformance/cases/yet_another_package/: embed2_pb2.py
buf/validate/conformance/harness/: results_pb2.py
buf/validate/internal/: string_format.py
bufbuild-protovalidate-protocolbuffers/: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  sync_to_pypi.py
bufbuild-protovalidate-protocolbuffers/buf/validate/: validate_pb2.pyi
bufbuild-protovalidate-protocolbuffers/buf/validate/proto5/buf/validate/: validate_pb2.py
bufbuild-protovalidate-protocolbuffers/buf/validate/proto6/buf/validate/: validate_pb2.py  validate_pb2.pyi
docs/: api.md  index.md
proto/: __init__.py
proto/buf/validate/: validate.proto
proto/tests/example/v1/: predefined.proto  validations.proto
protovalidate/: __init__.py  _backend.py  _cel_field_presence.py  _core.py  _extra_func.py  _funcs.py  _legacy.py  _rules.py  _string_format.py  _validator.py  config.py  validator.py
protovalidate/_celexpr/: __init__.py  _utils.py  bridge.py  extra_func.py  rules.py
protovalidate/_gen/buf/validate/: validate_pb.py
protovalidate/internal/: __init__.py  _core.py  _funcs.py  backend.py  cel_field_presence.py  constraints.py  extra_func.py  field_path.py  legacy.py  matches.py  rules.py  string_format.py
protovalidate/internal/celexpr/: __init__.py  _utils.py  bridge.py  extra_func.py  rules.py
scripts/: generate_cel.py  generate_protovalidate.py
src/buf/validate/: __init__.py  expression_pb2.py  validate_pb2.py  validator.py
src/buf/validate/conformance/: runner.py
src/buf/validate/conformance/cases/: bool_pb2.py  bytes_pb2.py  enums_pb2.py  filename_with_dash_pb2.py  kitchen_sink_pb2.py  kitchen_sink_pb2.pyi  maps_pb2.py  messages_pb2.py  messages_pb2.pyi  numbers_pb2.py  oneofs_pb2.py  repeated_pb2.py  repeated_pb2.pyi  strings_pb2.py  wkt_any_pb2.py  wkt_duration_pb2.py  wkt_nested_pb2.py  wkt_nested_pb2.pyi  wkt_timestamp_pb2.py  wkt_wrappers_pb2.py  wkt_wrappers_pb2.pyi
src/buf/validate/conformance/cases/custom_constraints/: custom_constraints_pb2.py
src/buf/validate/conformance/cases/other_package/: embed_pb2.py
src/buf/validate/conformance/cases/subdirectory/: in_subdirectory_pb2.py
src/buf/validate/conformance/cases/yet_another_package/: embed2_pb2.py  embed2_pb2.pyi
src/buf/validate/conformance/harness/: harness_pb2.py  harness_pb2.pyi  results_pb2.py  results_pb2.pyi
src/buf/validate/internal/: __init__.py  constraints.py  extra_func.py  string_format.py
src/buf/validate/priv/: private_pb2.py
test/: __init__.py  _utils.py  buf.gen.yaml  buf.yaml  conftest.py  test_benchmark.py  test_config.py  test_format.py  test_matches.py  test_validate.py  test_validate_legacy.py  versions.py
test/conformance/: nonconforming.cel-expr.yaml  nonconforming.yaml  runner.py  test_conformance.py
test/proto/bench/v1/: bench.proto  native.proto
test/proto/buf/validate/: validate.proto
test/proto/buf/validate/conformance/cases/: bool.proto  bytes.proto  enums.proto  filename-with-dash.proto  groups_editions.proto  groups_proto2.proto  ignore_empty_proto2.proto  ignore_empty_proto3.proto  ignore_empty_proto_editions.proto  ignore_proto2.proto  ignore_proto3.proto  ignore_proto_editions.proto  kitchen_sink.proto  library.proto  maps.proto  messages.proto  numbers.proto  oneofs.proto  predefined_rules_proto2.proto  predefined_rules_proto3.proto  predefined_rules_proto_editions.proto  repeated.proto  required_field_proto2.proto  required_field_proto3.proto  required_field_proto_editions.proto  strings.proto  wkt_any.proto  wkt_duration.proto  wkt_field_mask.proto  wkt_nested.proto  wkt_timestamp.proto  wkt_wrappers.proto
test/proto/buf/validate/conformance/cases/custom_rules/: custom_rules.proto
test/proto/buf/validate/conformance/cases/other_package/: embed.proto
test/proto/buf/validate/conformance/cases/subdirectory/: in_subdirectory.proto
test/proto/buf/validate/conformance/cases/yet_another_package/: embed2.proto
test/proto/buf/validate/conformance/harness/: harness.proto  results.proto
test/proto/tests/example/v1/: validations.proto
test/testdata/: string_ext_supplemental.textproto
tests/: __init__.py  all_suites.binproto  config_test.py  extra_func_test.py  format_test.py  matches_test.py  oneof.binpb  oneof.binproto  runner_test.py  validate_test.py
tests/conformance/: nonconforming.yaml  runner.py
upstream/proto/buf/validate/: validate.proto
