[project]
name = "protovalidate"
description = "Protocol Buffer Validation for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["protobuf", "protocol buffer", "validate"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cel-python>=0.5",
  "google-re2>=1",
  # We need at least this version, which started publishing wheels for Python 3.13.
  # Ref: https://github.com/google/re2/issues/516
  "google-re2>=1.1.20250722; python_version == '3.13'",
  # We need at least this version, which started publishing wheels for Python 3.14.
  # Ref: https://github.com/google/re2/issues/580
  "google-re2>=1.1.20251105; python_version == '3.14'",
  # 1.1 started supporting 3.12.
  "google-re2>=1.1; python_version == '3.12'",
  "protobuf-py>=0.1.1",
]
dynamic = ["version"]

# cel-expr-python (cel-cpp) is an optional, faster CEL backend. It is fully
# opt-in: it ships only version-specific compiled wheels for CPython 3.11-3.14
# on manylinux (glibc) / macOS / Windows (x86-64 + arm64) — no musllinux, no
# 3.10, no free-threaded (cp314t), no abi3/pure-python wheel. PEP 508 markers
# cannot express those distinctions (no free-threaded marker; manylinux and
# musllinux are both `sys_platform == 'linux'`), so it cannot be gated onto the
# required dependency list without risking a source build. When installed, the
# validator selects it automatically and otherwise falls back to cel-python.
[project.optional-dependencies]
cel-expr = [
  # google.protobuf is required alongside it: cel-expr-python only ingests
  # google.protobuf descriptor pools and messages, so protobuf-py values are
  # bridged through it at the validation boundary.
  # No 3.10 release exists (earliest wheel is cp311), so a floor marker is
  # required for the lock to resolve on our 3.10-supported base.
  "cel-expr-python>=0.1.3; python_version >= '3.11'",
  "protobuf>=5; python_version >= '3.11'",
  # We need at least this version, which fixed Python 3.14 compatibility (tp_new metaclass issue).
  # The fix was never backported to the 5.x series.
  # Ref: https://github.com/protocolbuffers/protobuf/pull/20594
  "protobuf>=6.31.0; python_version >= '3.14'",
]

[project.urls]
Documentation = "https://protovalidate.com"
Homepage = "https://github.com/bufbuild/protovalidate-python"
Issues = "https://github.com/bufbuild/protovalidate-python/issues"
Source = "https://github.com/bufbuild/protovalidate-python"

[dependency-groups]
dev = [
  "buf-bin==1.71.0",
  "fix-protobuf-imports==0.1.7",
  "google-re2-stubs==0.1.1",
  "poethepoet==0.46.0",
  "pytest==9.1.1",
  "pytest-benchmark==5.2.3",
  "ruff==0.15.18",
  "tombi==1.1.4",
  "ty==0.0.51",
  "types-protobuf==6.32.1.20260221",

  # The optional cel-expr backend, installed for local/CI testing of both
  # engines. Unpinned so the resolver picks the wheel for the active platform;
  # floored at 3.11 (its earliest release) so the lock resolves on 3.10.
  "cel-expr-python>=0.1.3; python_version >= '3.11'",

  # Unlike most dev dependencies, we don't pin to allow testing old and new versions
  "protobuf>=5",
  # We need at least this version, which fixed Python 3.14 compatibility (tp_new metaclass issue).
  # The fix was never backported to the 5.x series.
  # Ref: https://github.com/protocolbuffers/protobuf/pull/20594
  "protobuf>=6.31.0; python_version >= '3.14'",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { fallback_version = "0.0.0" }

[tool.pytest]
addopts = [
  "--benchmark-disable",
  "--benchmark-group-by=func,param:_id",
]
# Turn all warnings into errors,
# except DeprecationWarnings (which we knowingly tolerate due to using old `protobuf` APIs).
filterwarnings = ["error", "ignore::DeprecationWarning"]
strict = true
# restrict testpaths to speed up test discovery
testpaths = ["test"]

[tool.ruff]
line-length = 120
exclude = [
  # Protobuf generated code
  "test/gen/**",
]

lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore magic values - in this library, most are obvious in context.
  "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = ["protovalidate", "buf"]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions.
"test/**/*" = ["S101"]
