[project]
name = "protovalidate"
description = "Protocol Buffer Validation for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["protobuf", "protocol buffer", "validate"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cel-python>=0.5",
  "google-re2>=1",
  # We need at least this version, which started publishing wheels for Python 3.13.
  # Ref: https://github.com/google/re2/issues/516
  "google-re2>=1.1.20250722; python_version == '3.13'",
  # We need at least this version, which started publishing wheels for Python 3.14.
  # Ref: https://github.com/google/re2/issues/580
  "google-re2>=1.1.20251105; python_version == '3.14'",
  # 1.1 started supporting 3.12.
  "google-re2>=1.1; python_version == '3.12'",
  "protobuf-py>=0.2.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://protovalidate.com"
Homepage = "https://github.com/bufbuild/protovalidate-python"
Issues = "https://github.com/bufbuild/protovalidate-python/issues"
Source = "https://github.com/bufbuild/protovalidate-python"

# cel-expr has limited wheel support and no sdist for on-the-fly installation, so
# we can't add it as a primary dependency. Users can opt-in if their platform supports it.
[project.optional-dependencies]
cel-expr = [
  "cel-expr-python>=0.1.3; python_version >= '3.11'",
  "protobuf>=6.31.0; python_version >= '3.11'",
]

[dependency-groups]
# We ensure all dependencies are installed by default so IDE works properly for development.
dev = [
  { include-group = "dev-optional" },
  { include-group = "dev-required" },
]

# All dependencies required for CI and development, including running baseline tests.
dev-required = [
  "buf-bin==1.71.0",
  "fix-protobuf-imports==0.1.7",
  "google-re2-stubs==0.1.1",
  "license-header==0.0.1",
  "poethepoet==0.48.0",
  "pytest==9.1.1",
  "pytest-benchmark==5.2.3",
  "ruff==0.15.21",
  "tombi==1.2.0",
  "ty==0.0.59",
  "types-protobuf==6.32.1.20260221",
]

# Optional dependencies, used for development of optional features. We run tests without
# these installed to ensure missing optional dependencies does not introduce breakage.
# Unlike most dev dependencies, we don't pin to allow testing old and new
# versions. Floored at 6.31.0 required by the cel-expr-python backend.
dev-optional = [
  "cel-expr-python>=0.1.3; python_version >= '3.11'",
  "protobuf>=6.31.0",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { fallback_version = "0.0.0" }

## License headers
[tool.licenseheader]
copyright-holder = "Buf Technologies, Inc."
year-range = "2023-2026"
ignore = [
  ".github",
  "buf.yaml",
  "buf.gen.yaml",
  "test/conformance/nonconforming.yaml",
]

[tool.pytest]
addopts = [
  "--benchmark-disable",
  "--benchmark-group-by=func,param:_id",
]
# Turn all warnings into errors,
# except DeprecationWarnings (which we knowingly tolerate due to using old `protobuf` APIs).
filterwarnings = ["error", "ignore::DeprecationWarning"]
strict = true
# restrict testpaths to speed up test discovery
testpaths = ["test"]

[tool.ruff]
line-length = 120
exclude = [
  # Protobuf generated code
  "test/gen/**",
]

lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore magic values - in this library, most are obvious in context.
  "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = ["protovalidate", "buf"]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions.
"test/**/*" = ["S101"]
