[project]
name = "protovalidate"
version = "2.0.0"
description = "Protocol Buffer Validation for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["protobuf", "protocol buffer", "validate"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cel-python>=0.5",
  "google-re2>=1",
  # We need at least this version, which started publishing wheels for Python 3.13.
  # Ref: https://github.com/google/re2/issues/516
  "google-re2>=1.1.20250722; python_version == '3.13'",
  # We need at least this version, which started publishing wheels for Python 3.14.
  # Ref: https://github.com/google/re2/issues/580
  "google-re2>=1.1.20251105; python_version == '3.14'",
  # 1.1 started supporting 3.12.
  "google-re2>=1.1; python_version == '3.12'",
  "protobuf-py>=0.1.1",
]

[project.urls]
Documentation = "https://protovalidate.com"
Homepage = "https://github.com/bufbuild/protovalidate-python"
Issues = "https://github.com/bufbuild/protovalidate-python/issues"
Source = "https://github.com/bufbuild/protovalidate-python"

# cel-expr has limited wheel support and no sdist for on-the-fly installation, so
# we can't add it as a primary dependency. Users can opt-in if their platform supports it.
[project.optional-dependencies]
cel-expr = [
  "cel-expr-python>=0.1.3; python_version >= '3.11'",
  "protobuf>=6.31.0; python_version >= '3.11'",
]

[dependency-groups]
dev = [
  "buf-bin==1.71.0",
  "fix-protobuf-imports==0.1.7",
  "google-re2-stubs==0.1.1",
  "license-header==0.0.1",
  "poethepoet==0.48.0",
  "pytest==9.1.1",
  "pytest-benchmark==5.2.3",
  "ruff==0.15.21",
  "tombi==1.2.0",
  "ty==0.0.59",
  "types-protobuf==6.32.1.20260221",

  "cel-expr-python>=0.1.3; python_version >= '3.11'",

  # Unlike most dev dependencies, we don't pin to allow testing old and new
  # versions. Floored at 6.31.0 required by the cel-expr-python backend.
  "protobuf>=6.31.0",
]
docs = ["mkdocstrings-python==2.0.5", "zensical==0.0.50"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

## License headers
[tool.licenseheader]
copyright-holder = "Buf Technologies, Inc."
year-range = "2023-2026"
ignore = [
  ".github",
  "buf.yaml",
  "buf.gen.yaml",
  "test/conformance/nonconforming.yaml",
]

[tool.pytest]
addopts = [
  "--benchmark-disable",
  "--benchmark-group-by=func,param:_id",
]
# Turn all warnings into errors,
# except DeprecationWarnings (which we knowingly tolerate due to using old `protobuf` APIs).
filterwarnings = ["error", "ignore::DeprecationWarning"]
strict = true
# restrict testpaths to speed up test discovery
testpaths = ["test"]

[tool.ruff]
target-version = "py310"
exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
typing-extensions = false
select = ["ALL"]
ignore = [
  # Rules recommended to ignore when using ruff formatting
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "E501",
  "D206",
  "D300",
  "Q",
  "COM812",
  "COM819",

  "TRY003",  # Avoid specifying long messages outside the exception class
  "SLF001",  # Private member accessed
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "PLR2004",  # Magic value used in comparison - not helpful to name obvious constants
  # Complexity rules: humans reviewing code can judge whether complexity is justified.
  "C901",  # McCabe complexity
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments in function definition
  "PLR0914",  # Too many local variables
  "PLR0915",  # Too many statements
  "PLR0916",  # Too many boolean expressions
  "PLR1702",  # Too many nested blocks

  # TODO rules
  "TD",
  "FIX002",  # Line contains TODO, consider resolving the issue
]

[tool.ruff.lint.per-file-ignores]
"**/test/**/*.py" = [
  # missing docstrings; unnecessary in tests.
  "D1",

  "INP001",  # File is part of an implicit namespace package

  "FBT001",  # boolean positional args are fine in tests
  "FBT002",  # boolean default positional args are fine in tests
  "FBT003",  # boolean positional values are fine in tests
  "S101",  # assert is expected in tests
]
"**/scripts/*.py" = [
  # missing docstrings; unnecessary in scripts.
  "D1",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
known-third-party = []
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.build-backend]
module-name = "protovalidate"
module-root = ""
