[project]
name = "bufbuild-protovalidate-protocolbuffers"
version = "v0.14.0"
description = "Messages, enum types and stubs for buf.build/bufbuild/protovalidate for python."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["protobuf>=5"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.build.targets.sdist]
packages = ["buf"]

[tool.hatch.build.targets.wheel]
packages = ["buf"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
